--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@ version: 2.1
 
 orbs:
   python: circleci/python@0.2.1
+  win: circleci/windows@2.2.0
 
 jobs:
   build-and-test:
-    executor: python/default
+    executor: win/default
     steps:
       - checkout
       - python/load-cache
