--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: ./event(no-bot).py test
+          command: event(no-bot).py test
           name: Test
 
 workflows:
