--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,5 @@ jobs:
       - image: circleci/python:3.6
     steps:
       - checkout
-      - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-      - run:
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-          paths:
-            - "venv"
-      - run:
-          name: Running tests
-          command: |
-            . venv/bin/activate
-            python3 event(no-bot).py
-      - store_artifacts:
-          path: test-reports/
-          destination: python_app
+      - run: pip install -r requirements.txt
+        
