--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,9 @@ jobs:
       - image: circleci/python:3.8
     steps:
       - checkout
-      - run: pip install -r requirements.txt
-        
+      - run:
+          name: Install Python deps in a venv
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt        
