--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,10 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r requirements.txt        
+            pip install -r requirements.txt      
+      # caching test comment
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements/dev.txt" }}
+          paths:
+            - "venv"
+            
