--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           command: |
             . venv/bin/activate
-            python event(no-bot).py test
+            python 'event(no-bot).py' test
       - store_artifacts:
           path: test-reports/
           destination: tr1
