stripped all personal data

--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 # .env
 
 # this contains the token for the bot.
-DISCORD_TOKEN=ODA5NTQyNzgxNDMzMTUxNDk4.YCWndw.1AOOeSnRs-ag1UbVfs98UddqXI4
+DISCORD_TOKEN=
 
 # this contains the token for the server.
-DISCORD_GUILD=Episode 6: United Catwad
+DISCORD_GUILD=
 
 #this contains the text channel that karuta lives in.
-DISCORD_KARUTA_CHANNEL=799402226053283880
+DISCORD_KARUTA_CHANNEL=
 
 # this is the ID of the user of the Karuta bot
-DISCORD_KARUTA_BOT_ID=646937666251915264
+DISCORD_KARUTA_BOT_ID=
 
 # this is the channel ID for the misc. channel that is assigned to the server.
-DISCORD_KARUTA_SPAM_ID=809468697643188244
+DISCORD_KARUTA_SPAM_ID=
